--- a/content/locale/da/htlang.xml
+++ b/content/locale/da/htlang.xml
@@ -30,17 +30,17 @@
 	<!-- positions appearing on players page. copy "value". translate "short" -->
 	<positions>
 		<position type="Keeper" value="Målmand" short="Må" />
-		<position type="Central defender" value="Central forsvar" short="Cf" />
+		<position type="Central defender" value="Central forsvarsspiller" short="Cf" />
 		<position type="Wing back" value="Back" short="Ba" />
-		<position type="Inner midfielder" value="Central midtbane" short="Cm" />
+		<position type="Inner midfielder" value="Central midtbanespiller" short="Cm" />
 		<position type="Winger" value="Fløj" short="Fl" />
 		<position type="Forward" value="Angriber" short="An" />
 	</positions>
 
 	<!-- specialties appearing on players page. copy "value". translate "short" -->
 	<specialties>
-		<specialty type="Unpredictable" value="Uberegnelig " short="Un" />
-		<specialty type="Powerful" value="Kraftfuld " short="Po" />
+		<specialty type="Unpredictable" value="Uberegnelig" short="Un" />
+		<specialty type="Powerful" value="Kraftfuld" short="Po" />
 		<specialty type="Quick" value="Hurtig" short="Qu" />
 		<specialty type="Technical" value="Tekniker" short="Te" />
 		<specialty type="Head" value="Hovedstød" short="He" />
@@ -71,4 +71,40 @@
 		<level text="katastrofal" value="1" />
 		<level text="håbløs" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="elsket holdkammerat" value="5"/>
+		<level text="populær fyr" value="4"/>
+		<level text="sympatisk fyr" value="3"/>
+		<level text="behagelig fyr" value="2"/>
+		<level text="kontroversiel person" value="1"/>
+		<level text="ubehagelig type" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="helgenagtig" value="5"/>
+		<level text="retskaffen" value="4"/>
+		<level text="ærlig" value="3"/>
+		<level text="hæderlig" value="2"/>
+		<level text="uærlig" value="1"/>
+		<level text="berygtet" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="ustabil" value="5"/>
+		<level text="ilter" value="4"/>
+		<level text="temperamentsfuld" value="3"/>
+		<level text="balanceret" value="2"/>
+		<level text="rolig" value="1"/>
+		<level text="stille" value="0"/>
+	</aggressiveness>
 </language>
