--- a/content/locale/fy/htlang.xml
+++ b/content/locale/fy/htlang.xml
@@ -18,11 +18,11 @@
 
 	<!-- tactics appearing in match detail page. copy "value" -->
 	<tactics>
-		<tactic type="normal" value="normaal" />
-		<tactic type="pressing" value="druk sette" />
-		<tactic type="ca" value="tsjinoanfallen" />
-		<tactic type="aow" value="oanfal oer de wjukken" />
-		<tactic type="aim" value="oanfal troch it midden" />
+		<tactic type="normal" value="Normaal" />
+		<tactic type="pressing" value="Druk sette" />
+		<tactic type="ca" value="Tsjin-oanfallen" />
+		<tactic type="aow" value="Oanfalle oer de wjukken" />
+		<tactic type="aim" value="Oanfalle yn it midden" />
 		<tactic type="creatively" value="Kreatyf spylje" />
 		<tactic type="longshots" value="Ofstânsskoaten" />
 	</tactics>
@@ -71,4 +71,40 @@
 		<level text="jammerdearlik" value="1" />
 		<level text="net-besteand" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="spiler wêr't elts fan hâldt" value="5"/>
+		<level text="populêre spiler" value="4"/>
+		<level text="sympatyke spiler" value="3"/>
+		<level text="oangename spiler" value="2"/>
+		<level text="tsjinstridich spiler" value="1"/>
+		<level text="ferfelend figuer" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="hillich" value="5"/>
+		<level text="rjochtfeardich" value="4"/>
+		<level text="oprjocht" value="3"/>
+		<level text="earlik" value="2"/>
+		<level text="ûnearlik" value="1"/>
+		<level text="net te fertrouwen" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="ûnstabyl" value="5"/>
+		<level text="fier" value="4"/>
+		<level text="temperamentfol" value="3"/>
+		<level text="balansearre" value="2"/>
+		<level text="kalm" value="1"/>
+		<level text="rêstig" value="0"/>
+	</aggressiveness>
 </language>
