Renaming keys #1: (Discussion from r8115 ) foxtrick.Ratings.VnukStats -> foxtrick.Ratings.VnukStats.desc foxtrick.Ratings.HTitaVal -> foxtrick.Ratings.HTitaVal.desc foxtrick.Ratings.GardierStats -> foxtrick.Ratings.GardierStats.desc
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@8143 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -35,9 +35,9 @@ foxtrick.Ratings.HatStatsDetailed.desc=HatStats (مفصلة)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats منفصلة لكل تقييم
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-foxtrick.Ratings.VnukStats=VnukStats
-foxtrick.Ratings.HTitaVal=HTitaVal
-foxtrick.Ratings.GardierStats=GardierStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=تغيير الأيقونة المرتبطة إلى أحد العلامات في التعليق على العلامة بين قوسين مثل [سماوي] سوف يظهر اللون السماوي. بقية القيم المتاحة هي: أكوا وباء وأسود وأزرق وبني وسماوي وبنفسجي غامق وأخضر وفكري وأزرق فاتح وأخضر فاتح وبرتقالي ووردي وبنفسجي وأحمر وأبيض وأصفر
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=يقوم بإظهار قيمة المتوسط في صفحة مقارنة الإنتقالات
