--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -34,9 +34,9 @@ foxtrick.Ratings.HatStatsDetailed.desc=HatStats (részletes)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats, értékelésenként szétválasztva
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-foxtrick.Ratings.VnukStats=VnukStats
-foxtrick.Ratings.HTitaVal=HTitaVal
-foxtrick.Ratings.GardierStats=GardierStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Módosítja az egyes kedvencekhez rendelt ikonokat a megfelelő, szögletes zárójelben lévő kódnak a kedvencekhez adott megjegyzésbe szúrásával: a [cyan] beírásával pl. egy ciánkék ikont jelenít meg. Lehetséges értékek: [aqua] vízszín, [B] B betű, [black] fekete, [blue] kék, [brown] barna, [cyan] ciánkék, [darkpurple] sötétlila, [green] zöld, [idea] villanykörte, [lightblue] világoskék, [lightgreen] világoszöld, [orange] narancssárga, [pink] rózsaszín, [purple] lila, [red] piros, [white] fehér, [yellow] sárga
 foxtrick.FoxtrickAlert.desc=A tálcán egy felugró ablakban is megjeleníti a Hattrick hírablakában megjelenő eseményeket, akkor is, ha éppen valami mással foglalkozol, és nem a Hattrick oldalát böngészed (hírablak-események esetén hangjelzést is ad)
 foxtrick.FoxtrickAlert.AlertSlider.desc=A figyelemfelhívó ablak megjelenítése
