--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -35,9 +35,9 @@ foxtrick.Ratings.HatStatsDetailed.desc=HatStats (Details)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats aufgeschlüsselt nach Rating
 foxtrick.Ratings.LoddarStats.desc=LoddarStats
 foxtrick.Ratings.PeasoStats.desc=PeasoStats
-foxtrick.Ratings.VnukStats=VnukStats
-foxtrick.Ratings.HTitaVal=HTitaVal
-foxtrick.Ratings.GardierStats=GardierStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.BookmarkAdjust.desc=Icons in Verbindung mit einem Bookmark-Eintrag in den Bookmarks-Kommentaren können wie folgt hinzugefügt werden: z.B: [cyan] - zeigt ein cyanfarbenes Icon an. Mögliche Werte: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Zeigt den Medianpreis im Transfervergleich an
